add some aspect ration logic

--- a/public/style.css
+++ b/public/style.css
@@ -419,3 +419,11 @@ pre {
   display: grid;
   place-items: center;
 }
+
+.advanced {
+  color: darkgrey;
+}
+
+#advanced-options {
+  padding-top: 1em;
+}
