--- a/public/style.css
+++ b/public/style.css
@@ -454,6 +454,7 @@ pre {
   box-sizing: border-box;
   animation: rotation 0.6s linear infinite;
   margin-top: 1em;
+  display; none;
 }
 
 @keyframes rotation {
@@ -468,6 +469,7 @@ pre {
 .loader-container {
   display: grid;
   place-items: center;
+  display: none;
 }
 
 .advanced {
