fix CSS margin for form

--- a/public/style.css
+++ b/public/style.css
@@ -48,6 +48,7 @@ form {
   border-radius: 8px;
   box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.1);
   font-family: 'Secular One';
+  margin: auto;
 }
 #username,
 input[type='text'],
