--- a/public/style.css
+++ b/public/style.css
@@ -21,10 +21,7 @@ a:active {
   background: black;
 }
 /* selected link */
-a.gh-link:hover,
-a.gh-link:visited,
-a.gh-link:active,
-a.gh-link:link {
+a.gh-link {
   background: none;
 }
 html {
@@ -465,4 +462,25 @@ pre {
 }
 #advanced-options {
   padding-top: 1em;
+  margin-left: 1em;
+}
+#image-resolution-options {
+  margin-left: 1em;
+  padding-bottom: 1em;
+  padding-top: 1em;
+}
+.lastfm-link,
+a.lastfm-link {
+  text-decoration: none;
+  font-size: 12px;
+  color: unset;
+  background-color: unset;
+  margin-top: 0;
+}
+
+.lastfm-footer {
+  margin-top: 0;
+}
+.gh-footer {
+  margin-bottom: 0;
 }
