--- a/public/style.css
+++ b/public/style.css
@@ -63,6 +63,15 @@ input[type='number'] {
   background: none;
   color: black;
   font-family: 'Secular One';
+  line-height: 20px;
+  min-height: 28px;
+  border: 2px solid transparent;
+  box-shadow: rgb(0 0 0 / 12%) 0px 1px 3px, rgb(0 0 0 / 24%) 0px 1px 2px;
+  background: rgb(251, 251, 251);
+  transition: all 0.1s ease 0s;
+  :focus {
+    border: 2px solid rgb(124, 138, 255);
+  }
 }
 input[type='submit'],
 input[type='button'] {
