--- a/public/style.css
+++ b/public/style.css
@@ -67,7 +67,7 @@ input[type='number'] {
   min-height: 28px;
   border: 2px solid transparent;
   box-shadow: rgb(0 0 0 / 12%) 0px 1px 3px, rgb(0 0 0 / 24%) 0px 1px 2px;
-  background: rgb(251, 251, 251);
+  background: white;
   transition: all 0.1s ease 0s;
   :focus {
     border: 2px solid rgb(124, 138, 255);
