--- a/public/style/style.css
+++ b/public/style/style.css
@@ -18,20 +18,20 @@
   font-style: normal;
 }
 
-a.credits:link {
+a.href-links:link {
   color: black;
 }
 /* unvisited link */
-a.credits:visited {
+a.href-links:visited {
   color: black;
 }
 /* visited link */
-a.credits:hover {
+a.href-links:hover {
   color: #f2f2f2;
   background: black;
 }
 /* selected link */
-a.credits:active {
+a.href-links:active {
   color: #f2f2f2;
   background: black;
 }
@@ -123,7 +123,6 @@ input[type='submit']:hover {
 }
 input:focus {
   outline: none;
-  box-shadow: 0 0 0 1px black;
 }
 label {
   font-weight: bold;
@@ -402,7 +401,6 @@ fieldset {
 }
 .modal-text {
   text-align: center;
-  padding: 0.5em;
 }
 .close {
   color: #aaa;
