--- a/ui/src/app.css
+++ b/ui/src/app.css
@@ -40,8 +40,8 @@
 a {
   font-weight: 500;
   color: #646cff;
-  text-decoration: inherit;
 }
+
 a:hover {
   color: #535bf2;
 }
@@ -58,4 +58,58 @@ body {
 label {
   font-weight: bold;
   font-size: 1em;
+}
+
+a.href-links:link {
+  color: black;
+}
+/* unvisited link */
+a.href-links:visited {
+  color: black;
+}
+/* visited link */
+a.href-links:hover {
+  color: #f2f2f2;
+  background: black;
+}
+/* selected link */
+a.href-links:active {
+  color: #f2f2f2;
+  background: black;
+}
+
+.nonbold {
+  font-weight: normal;
+  color: grey;
+}
+
+@media (max-width: 600px) {
+  body {
+    padding: 10px;
+  }
+  form {
+    padding: 10px;
+  }
+  #username,
+  input[type='text'],
+  select,
+  input[type='number'],
+  input[type='submit'],
+  input[type='submit'],
+  input[type='button'] {
+    padding: 10px 15px;
+    font-size: 1em;
+    font-family: 'Poppins';
+  }
+  h2,
+  h1 {
+    font-size: 1.5em;
+  }
+  label {
+    font-size: 1em;
+  }
+  .modal-content {
+    width: 80% !important;
+    margin: 50% auto !important;
+  }
 }
